--- a/src/site/package.json
+++ b/src/site/package.json
@@ -3,16 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "filepond": "^4.13.7",
+    "filepond-plugin-image-exif-orientation": "^1.0.9",
+    "filepond-plugin-image-preview": "^4.6.4",
     "firebase": "^7.14.4",
+    "holmes-js": "^0.0.1",
     "hookrouter": "^1.2.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-filepond": "^7.0.1",
     "react-firebase-hooks": "^2.1.1",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "uppload": "^3.2.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "REACT_APP_STAGE=dev PORT=80 react-scripts start",
+    "build": "REACT_APP_STAGE=production react-scripts build",
     "deploy": "yarn build && netlify deploy --dir=build"
   },
   "eslintConfig": {
