--- a/src/site/public/manifest.json
+++ b/src/site/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "ImgThreads",
+  "name": "<Img />Threads",
   "icons": [
     {
       "src": "favicon.ico",
