--- a/src/site/package.json
+++ b/src/site/package.json
@@ -18,9 +18,10 @@
   },
   "scripts": {
     "start": "REACT_APP_ENV=dev react-scripts start",
-    "build": "REACT_APP_ENV=prod react-scripts build",
+    "build": "react-scripts build",
     "lint": "eslint src",
-    "deploy": "yarn build && netlify deploy --dir=build"
+    "deploy:dev": "REACT_APP_ENV=dev yarn build && netlify deploy --dir build",
+    "deploy:prod": "REACT_APP_ENV=prod yarn build && netlify deploy --prod --dir build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -36,5 +37,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "netlify-cli": "^2.51.0"
   }
 }
