--- a/src/backend/serverless.yml
+++ b/src/backend/serverless.yml
@@ -1,6 +1,8 @@
 org: cedmax
 app: img-threads
 service: imgthreads
+plugins:
+  - serverless-pseudo-parameters
 
 provider:
   name: aws
@@ -9,7 +11,8 @@ provider:
   runtime: nodejs12.x
   environment:
     ENV: ${self:provider.stage}
-
+    KMSKeyId:
+      Fn::GetAtt: [KMSKey, Arn]
   iamRoleStatements:
     - Effect: 'Allow'
       Action:
@@ -25,6 +28,13 @@ provider:
         - dynamodb:GetItem
         - dynamodb:PutItem
       Resource: arn:aws:dynamodb:*:*:table/${file(./config.${self:provider.stage}.json):dynamoTable}
+    - Effect: Allow
+      Action:
+        - kms:Encrypt
+        - kms:Decrypt
+      Resource:
+        Fn::GetAtt: [KMSKey, Arn]
+
   s3:
     destinationBucket:
       name: ${file(./config.${self:provider.stage}.json):bucket}
@@ -66,3 +76,15 @@ resources:
         ProvisionedThroughput:
           ReadCapacityUnits: 1
           WriteCapacityUnits: 1
+    KMSKey:
+      Type: AWS::KMS::Key
+      Properties:
+        Enabled: true
+        KeyPolicy:
+          Statement:
+            Effect: 'Allow'
+            Principal:
+              AWS: arn:aws:iam::#{AWS::AccountId}:root
+            Action:
+              - 'kms:*'
+            Resource: '*'
