--- a/src/site/package.json
+++ b/src/site/package.json
@@ -20,7 +20,7 @@
     "start": "REACT_APP_ENV=dev react-scripts start",
     "build": "react-scripts build",
     "lint": "eslint src",
-    "deploy:dev": "REACT_APP_ENV=dev yarn build && netlify deploy --dir build",
+    "deploy:stage": "REACT_APP_ENV=stage yarn build && netlify deploy --dir build",
     "deploy:prod": "REACT_APP_ENV=prod yarn build && netlify deploy --prod --dir build"
   },
   "eslintConfig": {
