--- a/src/site/package.json
+++ b/src/site/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@exampledev/new.css": "^1.1.3",
     "filepond": "^4.13.7",
     "filepond-plugin-image-exif-orientation": "^1.0.9",
     "filepond-plugin-image-preview": "^4.6.4",
@@ -14,6 +15,7 @@
     "react-filepond": "^7.0.1",
     "react-firebase-hooks": "^2.1.1",
     "react-scripts": "3.4.1",
+    "typeface-inter": "^3.12.0",
     "uppload": "^3.2.0"
   },
   "scripts": {
