--- a/src/site/package.json
+++ b/src/site/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^16.13.1",
     "react-filepond": "^7.0.1",
     "react-firebase-hooks": "^2.1.1",
+    "react-images": "^1.1.7",
     "react-scripts": "3.4.1",
     "typeface-inter": "^3.12.0",
     "uppload": "^3.2.0"
