--- a/.gitignore
+++ b/.gitignore
@@ -5,5 +5,6 @@ jspm_packages
 # Serverless directories
 **/*.serverless
 **/serviceAccountKey.json
+**/encryptKey.json
 # Local Netlify folder
 .netlify
