--- a/src/backend/package.json
+++ b/src/backend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "aws-sdk": "2.682.0",
+    "cryptr": "^6.0.2",
     "firebase-admin": "8.12.1",
     "gm": "1.23.1",
     "uuid": "8.1.0"
